# dytallix-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  start-local.sh  stop-local.sh
.github/workflows/: ci.yml  public-smoke.yml  release.yml
crates/dytallix-cli/: Cargo.toml
crates/dytallix-cli/src/: main.rs  output.rs
crates/dytallix-cli/src/commands/: balance.rs  chain.rs  config.rs  contract.rs  crypto.rs  dev.rs  faucet.rs  governance.rs  init.rs  mod.rs  node.rs  send.rs  stake.rs  wallet.rs
crates/dytallix-core/: Cargo.toml
crates/dytallix-core/src/: address.rs  error.rs  hash.rs  keypair.rs  lib.rs  signature.rs
crates/dytallix-sdk/: Cargo.toml
crates/dytallix-sdk/src/: client.rs  error.rs  faucet.rs  keystore.rs  lib.rs  transaction.rs
docs/: README.md  cli-reference.md  core-concepts.md  faq.md  getting-started.md  public-capabilities.json  sdk-reference.md
examples/: README.md  deploy-contract.rs  first-keypair.rs  first-transaction.rs
examples/contracts/minimal_contract/: Cargo.toml  README.md
examples/contracts/minimal_contract/src/: lib.rs
scripts/: check_public_alignment.py  public_smoke.sh
