[workspace]
resolver = "2"
members = [
    "crates/dytallix-core",
    "crates/dytallix-sdk",
    "crates/dytallix-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DytallixHQ"]
license = "MIT"
repository = "https://github.com/DytallixHQ/dytallix-sdk"
homepage = "https://dytallix.com"
documentation = "https://github.com/DytallixHQ/dytallix-sdk/tree/main/docs"

[workspace.dependencies]
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"
fips204 = "0.4"
blake3 = "1.5"
bech32 = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha3 = "0.10"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
colored = "2"
thiserror = "1"
anyhow = "1"
tokio-test = "0.4"
