[package]
name = "dytallix-cli"
description = "CLI for the Dytallix PQC-native blockchain testnet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "dytallix"
path = "src/main.rs"

[[example]]
name = "deploy-contract"
path = "../../examples/deploy-contract.rs"

[dependencies]
dytallix-core = { path = "../dytallix-core" }
dytallix-sdk = { path = "../dytallix-sdk", features = ["network"] }
tokio = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
