[package]
name = "dytallix-core"
description = "Cryptographic primitives for the Dytallix PQC-native blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fips204 = "0.4"
pqcrypto-sphincsplus = { workspace = true }
pqcrypto-traits = { workspace = true }
rand_core = "0.6"
blake3 = { workspace = true }
bech32 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
