[package]
name = "dytallix-sdk"
description = "SDK for building on the Dytallix PQC-native blockchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[example]]
name = "first-keypair"
path = "../../examples/first-keypair.rs"

[[example]]
name = "first-transaction"
path = "../../examples/first-transaction.rs"
required-features = ["network"]

[features]
default = []
network = ["dep:reqwest", "dep:tokio"]

[dependencies]
dytallix-core = { path = "../dytallix-core" }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
